# ClientServer-DirectoryFounder

./: .gitignore  CMakeLists.txt  Feedback  Makefile  README.md  client.cpp  mainClient.cpp  mainServer.cpp  run.sh  server.cpp
Client/: Client.cpp  Client.h
PathFounder/: PathFounder.cpp  PathFounder.h
Server/: Server.cpp  Server.h
